test/Fail/Issue2301.err
Issue2301.agda:12.11-15: error: [UnequalTypes]
The function type
  _A_8 → Box _A_8
is not a subtype of
  .A → Box A
because:
  one has relevant domain, while the other is irrelevant.
when checking that the expression wrap has type .A → Box A
